--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/icons/sidnabyg/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0c5c8d" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="Time log and reporting" content="Time log and reporting app" />
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/icons/sidnabyg/apple-touch-icon.png"
@@ -27,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Time log and reporting</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
