--- a/app/src/config/themes/sidnabyg/tocopy/index.html
+++ b/app/src/config/themes/sidnabyg/tocopy/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/sidnabyg/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0c5c8d" />
     <meta name="Time log and reporting" content="Time log and reporting app" />
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/icons/sidnabyg/apple-touch-icon.png"
+      href="%PUBLIC_URL%/icons/apple-touch-icon.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
